--- a/Cinestar-app/Cinestar-app.csproj
+++ b/Cinestar-app/Cinestar-app.csproj
@@ -83,6 +83,9 @@
 	  <MauiXaml Update="Home.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="HomePage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="LoyaltyBodovi.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
