--- a/Cinestar-app/Cinestar-app.csproj
+++ b/Cinestar-app/Cinestar-app.csproj
@@ -65,9 +65,7 @@
 
 	<ItemGroup>
 		<!-- App Icon -->
-		<MauiIcon
-			Include="Resources\AppIcon\icon.png"
-			OutputName="appicon" />
+		<MauiIcon Include="Resources\AppIcon\icon.png" OutputName="appicon" />
 
 		<!-- Splash Screen -->
 		<MauiSplashScreen
